[tool.poetry]
name = "leetcode"
version = "0.1.0"
description = ""
authors = ["drillbits <neji@drillbits.jp>"]
license = "Apache-2.0"

[tool.poetry.dependencies]
python = "^3.8"

[tool.poetry.dev-dependencies]
isort = "^4.3.21"
flake8 = "^3.7.9"
black = "^19.10b0"

[build-system]
requires = ["poetry>=1.0.2"]
build-backend = "poetry.masonry.api"
